# Obsia

./: .gitignore  README.md
Modelo/llm/: .gitignore  CMakeLists.txt  clean.ps1
Modelo/llm/app/: CMakeLists.txt  README.md  bm25.cpp  bm25.h  main.cpp  rag_engine.cpp  rag_engine.h  text_norm.h
Modelo/llm/rag/: Integración.md  README.md
Modelo/llm/rag/embeddings/: chunks.json  embeddings.npy  index.faiss  metadata.json  qa_medico_obstetricia.json  qa_medico_obstetricia_2.json  qa_medico_obstetricia_3.json  qa_medico_obstetricia_4.json
Modelo/llm/rag/knowledge_base/: chunks_obstetricia_completo.json  venencia.json
Modelo/llm/rag/scripts/: generate_embeddings.py  requirements.txt  test_search.py
app/: build.gradle.kts
app/src/main/assets/: emergency_clinical_rules.json  emergency_config.json
app/src/main/java/com/upb/obsia/data/repository/: EngineRepositoryImpl.kt
app/src/main/java/com/upb/obsia/di/: AppModule.kt
app/src/main/java/com/upb/obsia/domain/: EmergencyClinicalRules.kt  EmergencyDetector.kt  QueryOrchestrator.kt  RoutineClinicalRules.kt
app/src/main/java/com/upb/obsia/domain/model/: ClinicalResponse.kt
app/src/main/java/com/upb/obsia/ui/screens/: ChatScreen.kt
app/src/main/java/com/upb/obsia/ui/viewmodel/: ChatViewModel.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
